...
                )
                .ignoresSafeArea()
                
                // Form content
                Form {
                    Section(header: Text("Book Details")) {
                        TextField("Title of the book", text: $viewModel.title)
                        TextField("Author", text: $viewModel.author)
                        TextEditor(text: $viewModel.summary)
                            .frame(height: 100)
                        Picker("Genre", selection: $viewModel.genre) {
                            ForEach(Genre.allCases, id: \.self) { genre in
                                Text(genre.rawValue).tag(genre)
...
                    Button("Cancel") {
                        dismiss()
                    }
                }
                
                ToolbarItem(placement: .confirmationAction) {
                    Button("Save") {
                        
                        onSave()
                        viewModel.Save()
                        dismiss()
                    }
                    .disabled(viewModel.isSaveButtonDisabled)
...
